# modular_collection

./: .gitignore  Cargo.toml  README.md  bundle_and_copy.sh  bundler.toml
.github/workflows/: README.md  build.yml  rust-clippy.yml  test.yml
collection/euclidian/: Cargo.toml  README.md
collection/euclidian/src/: lib.rs  sequence.rs
collection/patterns/: Cargo.toml  README.md
collection/patterns/src/: active_note.rs  editor.rs  lib.rs  main.rs  note_viewer.rs  processors.rs  utils.rs
