[package]
name = "modular_euclidian"
version = "0.1.0"
edition = "2021"
authors = ["JRS<mail@example.com>"]
description = """Will be added later"""
license = "GPLv3"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
sets = "1.1.4"
simplelog = "^0.12.0"
sorted-vec = "0.8.0"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

