[package]
name = "modular_patterns"
version = "0.1.0"
edition = "2021"
authors = ["JRS<mail@example.com>"]
description = """Modular::Patterns is a MIDI arpeggiator that combines a chord channel with a pattern. It's main
difference to other plugins (I know of) it uses midi input for both chords and patterns. This makes it possible to use
the UI of your DAW to edit you MIDI clips and tracks. Modular::Patterns is an audio plugin and is released in VST-3 or
Clap format."""
license = "GPLv3"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Remove the `assert_process_allocs` feature to allow allocations on the audio
# thread in debug builds.
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs"] }
sets = "1.1.4"
simplelog = "^0.12.0"
sorted-vec = "0.8.0"
# Uncomment the below line to disable the on-by-default VST3 feature to remove
# the GPL compatibility requirement
# nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", default_features = false, features = ["assert_process_allocs"] }

